--- a/builds/development/views/help.html
+++ b/builds/development/views/help.html
@@ -1,5 +1,7 @@
 <div ng-include="'views/helpNav.html'"></div>
 
+<h2>Model:</h2>{{model}}
+
 <!-- start STEP 1 DIV -->
 <div id="step1" ng-show="currentStep == 1">
 	<h1>Profile</h2>
